[package]
name = "final-rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.7"
bevy-inspector-egui = "0.11"
rand = "0.8"
iyes_loopless = "0.5"
bevy_asset_loader = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
